<resources>
    <string name="app_name">EjemploViewModel</string>
    <string name="sumar">Sumar</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="salvar">SALVAR</string>
    <string name="ver">VER</string>
    <string name="ingresar_usuario">INGRESAR USUARIO</string>
    <string name="view_model_sumar_activity">view model sumar activity</string>
    <string name="resultado">resultado</string>
    <string name="resultadovm">resultadovm</string>
    <string name="resultado_lv">Resultado</string>
    <string name="guardar">Guardar</string>
    <string name="live_data">Live Data</string>
</resources>
